--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -1,13 +1,130 @@
 @import "var";
 @import "base";
 @import "functionLib";
-
 body, html {
 	height: 100%;
+	background:center no-repeat url('/images/ice-cream.jpg');
+	-webkit-background-size: contain;
+	background-size: contain;
 }
 
 .container {
 	position: relative;
-	height: 100%;
+//	height: 100%;
 	padding: 10px;
+}
+.title{
+	text-align: center;
+	@h:35px;
+	height: @h;
+	line-height: @h;
+	font-size: 16px;
+	background-color: rgb(233,32,100);
+	color: #ffffff;
+}
+.show-content{
+	ul{
+		font-size: 14px;
+		width: 150px;
+		height: 80px;
+		margin: 0 auto;
+//		color: #3c3c3c;
+		color: #ffffff;
+	}
+	border-bottom: 1px solid @bordercolor;
+}
+.show-sum{
+	padding: 20px 0;
+//	border-bottom: 1px solid @bordercolor;
+//	.sum{
+//		@sumR:100px;
+//		width: @sumR;
+//		height: @sumR;
+//		border-radius: 50%;
+//		background-color: #fb2603;
+//		margin: 0 auto;
+//		position: relative;
+//		span{
+//			font-size: 30px;
+//			display: block;
+//			text-align: center;
+//			@R:36px;
+//			width: @R;
+//			height: @R;
+//			line-height: @R;
+//			top: 50%;
+//			left: 50%;
+//			margin-top: -@R / 2;
+//			margin-left: -@R / 2;
+//			position: absolute;
+//			.origin2D(@R/2,60px);
+//		}
+//		@deg:35deg;
+//		.s{
+//			color:#00FF00;
+//			-webkit-transform:translate(0,-30px) rotate(-@deg);
+//		}
+//		.u{
+//			color:#00FF00;
+//			-webkit-transform:translate(0,-30px);
+//		}
+//		.m{
+//			color:#00FF00;
+//			-webkit-transform:translate(0,-30px) rotate(@deg);
+//		}
+//		.num{
+//			font-size: 24px;
+//			color: darkviolet;
+//		}
+//	}
+	.sum{
+
+	}
+}
+.tools-bar{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	background: rgb(253,88,64);
+	background: -webkit-gradient(linear,center top,center bottom,from(#ccc), to(#000));
+	background: -webkit-linear-gradient(top,rgb(253,88,64),rgb(255,43,100));
+//	border-top: 1px solid #9c9c9c;
+	@radius:20px;
+	border-top-left-radius: @radius;
+	border-top-right-radius: @radius;
+	height: 40px;
+	line-height: 40px;
+	width: 100%;
+	.plus-one{
+		position: absolute;
+		@R:80px;
+		width: @R;
+		height: @R;
+		border-radius: 50%;
+		color: #ffffff;
+		text-align: center;
+		line-height: @R;
+		font-size: 26px;
+		background-color: #33ccff;
+		bottom: 5px;
+		left: 50%;
+		margin-left: -@R / 2;
+	}
+	.tools-wrap{
+		width: 150px;
+		>div{
+			width: 50%;
+			float: left;
+		}
+	}
+	.left{
+		float: left;
+	}
+	.right{
+		float: right;
+	}
+	div{
+		color: #ffffff;
+		text-align: center;
+	}
 }
