--- a/public/styles/var.less
+++ b/public/styles/var.less
@@ -1,5 +1,5 @@
 //设置全局变量
-@bordercolor:#d9d9d9;
+@bordercolor:rgb(75,197,215);
 @activeC:	#00ccff;
 @ff_default: 'Microsoft YaHei','SimHei','WenQuanYi Micro Hei','Hiragino Sans GB' ,  sans-serif;
 @fix-top: 50px;
