点击可以变换数字

--- a/views/main.jade
+++ b/views/main.jade
@@ -16,18 +16,17 @@ html(lang="en")
 					li 海潮叔叔 + 1
 					li 甜姨 + 1
 					li neeya小傻子 + 1
-			section.show-sum
-				div.sum-content
-					span.sum sum
-					span.num 20
+			canvas#sum.sum
 			div.tools-bar.clearfix
 				div.tools-wrap.left.clearfix
 					div.add-text 需求
 					div.change-name 改名
-				div.plus-one +1
+				div#plusOne.plus-one +1
 				div.tools-wrap.right.clearfix
 					div.detail 详情
 					div.feedback 反馈
 		script(type='text/javascript',src='/js/zepto.js')
 		script(type='text/javascript',src='/js/touch.js')
+		script(type='text/javascript',src='/js/digit.js')
+		script(type='text/javascript',src='/js/countdown.js')
 		script(type='text/javascript',src='/js/main.js')
