--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -3,9 +3,9 @@
 @import "functionLib";
 body, html {
 	height: 100%;
-	background:center no-repeat url('/images/ice-cream.jpg');
-	-webkit-background-size: contain;
-	background-size: contain;
+//	background:center no-repeat url('/images/ice-cream.jpg');
+//	-webkit-background-size: contain;
+//	background-size: contain;
 }
 
 .container {
@@ -33,53 +33,8 @@ body, html {
 	}
 	border-bottom: 1px solid @bordercolor;
 }
-.show-sum{
-	padding: 20px 0;
-//	border-bottom: 1px solid @bordercolor;
-//	.sum{
-//		@sumR:100px;
-//		width: @sumR;
-//		height: @sumR;
-//		border-radius: 50%;
-//		background-color: #fb2603;
-//		margin: 0 auto;
-//		position: relative;
-//		span{
-//			font-size: 30px;
-//			display: block;
-//			text-align: center;
-//			@R:36px;
-//			width: @R;
-//			height: @R;
-//			line-height: @R;
-//			top: 50%;
-//			left: 50%;
-//			margin-top: -@R / 2;
-//			margin-left: -@R / 2;
-//			position: absolute;
-//			.origin2D(@R/2,60px);
-//		}
-//		@deg:35deg;
-//		.s{
-//			color:#00FF00;
-//			-webkit-transform:translate(0,-30px) rotate(-@deg);
-//		}
-//		.u{
-//			color:#00FF00;
-//			-webkit-transform:translate(0,-30px);
-//		}
-//		.m{
-//			color:#00FF00;
-//			-webkit-transform:translate(0,-30px) rotate(@deg);
-//		}
-//		.num{
-//			font-size: 24px;
-//			color: darkviolet;
-//		}
-//	}
-	.sum{
+.sum{
 
-	}
 }
 .tools-bar{
 	position: fixed;
