--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -3,9 +3,9 @@
 @import "functionLib";
 body, html {
 	height: 100%;
-//	background:center no-repeat url('/images/ice-cream.jpg');
-//	-webkit-background-size: contain;
-//	background-size: contain;
+	background:center no-repeat url('/images/ice-cream.jpg');
+	-webkit-background-size: contain;
+	background-size: contain;
 }
 
 .container {
