--- a/views/main.jade
+++ b/views/main.jade
@@ -15,13 +15,14 @@ html(lang="en")
 				ul
 					li 海潮叔叔 + 1
 					li 甜姨 + 1
-					li neeya小傻子 + 1
+					li neeya大傻子 + 1
 			canvas#sum.sum
 			div.tools-bar.clearfix
 				div.tools-wrap.left.clearfix
 					div.add-text 需求
 					div.change-name 改名
-				div#plusOne.plus-one +1
+				div#plusOne.main-button.plus-one
+					span +1
 				div.tools-wrap.right.clearfix
 					div.detail 详情
 					div.feedback 反馈
