--- a/views/main.jade
+++ b/views/main.jade
@@ -15,7 +15,7 @@ html(lang="en")
 				ul
 					li 海潮叔叔 + 1
 					li 甜姨 + 1
-					li neeya大傻子 + 1
+					li neeya2傻子 + 1
 			canvas#sum.sum
 			div.tools-bar.clearfix
 				div.tools-wrap.left.clearfix
